# routes.go
@@ -54,6 +54,10 @@ func NewRouter(kdb *KDB, token string) *mux.Router {
 		Route{"BulkPutDocuments", "POST", "/{db}/_bulk_docs", kdbHandler.BulkPutDocuments},
 		Route{"BulkGetDocuments", "POST", "/{db}/_bulk_gets", kdbHandler.BulkGetDocuments},
 		Route{"DatabaseChanges", "GET", "/{db}/_changes", kdbHandler.DatabaseChanges},
+		Route{"GetAttachment", "GET", "/{db}/{docid:[A-Za-z0-9][A-Za-z0-9_]*}/{attname}", kdbHandler.GetAttachment},
+		Route{"HeadAttachment", "HEAD", "/{db}/{docid:[A-Za-z0-9][A-Za-z0-9_]*}/{attname}", kdbHandler.HeadAttachment},
+		Route{"PutAttachment", "PUT", "/{db}/{docid:[A-Za-z0-9][A-Za-z0-9_]*}/{attname}", kdbHandler.PutAttachment},
+		Route{"DeleteAttachment", "DELETE", "/{db}/{docid:[A-Za-z0-9][A-Za-z0-9_]*}/{attname}", kdbHandler.DeleteAttachment},
 		Route{"GetDocument", "GET", "/{db}/{docid}", kdbHandler.GetDocument},
 		Route{"HeadDocument", "HEAD", "/{db}/{docid}", kdbHandler.HeadDocument},
 		Route{"PostDocument", "POST", "/{db}", kdbHandler.PutDocument},
